--- a/portfolio.css
+++ b/portfolio.css
@@ -1,21 +1,60 @@
+.fadein{
+    opacity: 0;
+    filter: blur(5px);
+    transition: opacity 1.5s, blur 1.5s;
+}
+.fadein_show{
+    opacity: 1;
+    filter: blur(0px);
+}
+.bottotop{
+    transform: translateY(20%);
+    transition: transform 1.5s;
+}
+.bottotop_show{
+    transform: translateY(0);
+}
 body{
     margin: 0px 0px 0px 0px;
 }
-#load_screen{
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    position: fixed;
-    top: 0px;
-}
-#welcome{
+#header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-top: 70px;
     padding-left: 100px;
+    padding-right: 100px;
     margin-bottom: 100px;
+}
+#welcome{
+    margin: 0px 0px;
     font-size: 55px;
     font-family: 'DM Sans', sans-serif;
     font-weight: 500;
+}
+#contact_sc{
+    display: flex;
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+    text-decoration: none;
+    background-color: #12131a;
+    border: 1px solid #12131a;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 50px;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    color: white;
+    transition: background-color 0.5s, color 0.5s;
+}
+#contact_sc:hover{
+    background-color: white;
+    color: #12131a;
 }
 #pfp{
     height: 300px;
@@ -28,8 +67,8 @@ body{
     justify-content: center;
     align-items: center;
     margin-bottom: 100px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 #intro_text{
     width: 350px;
@@ -79,11 +118,6 @@ body{
     align-items: center;
     flex-direction: column;
 }
-#abtme_block{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 #abtme1{
     font-size: 20px;
     font-family: 'DM Sans', sans-serif;
@@ -106,6 +140,11 @@ body{
     justify-content: space-around;
     align-items: center;
     margin-top: 80px;
+}
+#abtme_block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #exp{
     border: 1px solid white;
@@ -146,7 +185,7 @@ body{
     font-size: 17px;
     font-family: 'DM Sans', sans-serif;
     color: rgb(138, 138, 138);
-    font-weight: 500;
+    font-weight: 200;
     margin-top: 0px;
     margin-bottom: 0px;
     text-align: center;
@@ -155,7 +194,7 @@ body{
     font-size: 17px;
     font-family: 'DM Sans', sans-serif;
     color: rgb(138, 138, 138);
-    font-weight: 500;
+    font-weight: 200;
     margin-top: 5px;
     text-align: center;
 }
@@ -174,7 +213,7 @@ body{
     font-size: 17px;
     font-family: 'DM Sans', sans-serif;
     color: rgb(138, 138, 138);
-    font-weight: 500;
+    font-weight: 200;
     margin-top: 0px;
     margin-bottom: 0px;
     text-align: center;
@@ -184,7 +223,7 @@ body{
     font-family: 'DM Sans', sans-serif;
     text-align: center;
     color: rgb(138, 138, 138);
-    font-weight: 500;
+    font-weight: 200;
     margin-top: 0px;
     margin-bottom: 0px;
     text-align: center;
@@ -193,8 +232,80 @@ body{
     font-size: 17px;
     font-family: 'DM Sans', sans-serif;
     color: rgb(138, 138, 138);
-    font-weight: 500;
+    font-weight: 200;
     margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+}
+#emaillogo{
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+}
+#email{
+    font-size: 20px;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 200;
+}
+#phonelogo{
+    height: 35px;
+    width: 35px;
+    margin-right: 5px;
+}
+#phone{
+    font-size: 20px;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 200;
+}
+#phone_link{
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+#contact_section{
+    width: 100%;
+    height: 400px;
+    padding-top: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#email_link{
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+#contact_block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#contact_boxes{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 80px;
+    border: 1px solid #12131a;
+    border-radius: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+#contact1{
+    font-size: 20px;
+    font-family: 'DM Sans', sans-serif;
+    color: #626262;
+    font-weight: 400;
+    margin-top: 15px;
+    margin-bottom: 0px;
+    text-align: center;
+}
+#contact2{
+    font-size: 45px;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 500;
+    margin-top: 5px;
     margin-bottom: 0px;
     text-align: center;
 }
@@ -218,6 +329,17 @@ body{
         margin-left: 0px;
     }
 }
+@media screen and (max-width: 750px) {
+    #contact_boxes{
+        flex-direction: column;
+    }
+    #header{
+        flex-direction: column;
+    }
+    #contact_sc{
+        margin-top: 20px;
+    }
+}
 @media screen and (max-width: 575px) {
     #exp{
         width: 295px;
@@ -239,5 +361,18 @@ body{
     }
     #edu4{
         font-size: 14px;
+    }
+}
+@media screen and (max-width: 500px) {
+    #email{
+        font-size: 17px;
+    }
+    #phone{
+        font-size: 17px;
+    }
+}
+@media(prefers-reduced-motion){
+    .fadein{
+        transition: none;
     }
 }
