--- a/portfolio.css
+++ b/portfolio.css
@@ -340,6 +340,15 @@ body{
         margin-top: 20px;
     }
 }
+@media screen and (max-width: 514px) {
+    #header{
+        padding-left: 10vw;
+        padding-right: 10vw;
+    }
+    #welcome{
+        font-size: 10vw;
+    }
+}
 @media screen and (max-width: 575px) {
     #exp{
         width: 295px;
@@ -369,6 +378,10 @@ body{
     }
     #phone{
         font-size: 17px;
+    }
+    #contact_boxes{
+        padding-right: 10px;
+        padding-left: 10px;
     }
 }
 @media(prefers-reduced-motion){
