--- a/portfolio.css
+++ b/portfolio.css
@@ -102,11 +102,24 @@ body{
 #logos{
     display: flex;
 }
+#logos a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 .logo{
     width: 40px;
     height: 40px;
-    margin-left: 10px;
-    margin-right: 10px;
+    transition: width, height, margin-left, margin-right;
+    transition-duration: 0.3s;
+}
+.logo:hover{
+    width: 50px;
+    height: 50px;
 }
 #about_section{
     background-color: #12131a;
