--- a/portfolio.css
+++ b/portfolio.css
@@ -14,8 +14,42 @@
 .bottotop_show{
     transform: translateY(0);
 }
+#cursor_dot{
+    width: 5px;
+    height: 5px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    -webkit-backdrop-filter: invert();
+    backdrop-filter: invert();
+}
+#cursor_outline{
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    -webkit-backdrop-filter: invert();
+    backdrop-filter: invert();
+}
+a {
+    cursor: none;
+}
 body{
     margin: 0px 0px 0px 0px;
+    cursor: none;
+    height: 100vh;
+    width: 100vw;
 }
 #header{
     display: flex;
