--- a/portfolio.css
+++ b/portfolio.css
@@ -47,6 +47,7 @@ a {
 }
 body{
     margin: 0px 0px 0px 0px;
+    padding-top: 70px;
     cursor: none;
     height: 100vh;
     width: 100vw;
@@ -55,7 +56,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 70px;
     padding-left: 100px;
     padding-right: 100px;
     margin-bottom: 100px;
