--- a/portfolio.css
+++ b/portfolio.css
@@ -42,6 +42,9 @@
     background-color: #12131a;
     border: 2px solid white;
 }
+html{
+    scroll-behavior: smooth;
+}
 a {
     cursor: none;
 }
