--- a/portfolio.css
+++ b/portfolio.css
@@ -42,11 +42,11 @@
     background-color: #12131a;
     border: 2px solid white;
 }
-html{
-    scroll-behavior: smooth;
-}
 a {
     cursor: none;
+}
+html{
+    scroll-behavior: smooth;
 }
 body{
     margin: 0px 0px 0px 0px;
@@ -89,9 +89,37 @@ body{
     color: white;
     transition: background-color 0.5s, color 0.5s;
 }
+#download_cv{
+    display: flex;
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+    text-decoration: none;
+    background-color: #12131a;
+    border: 1px solid #12131a;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 50px;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    color: white;
+    transition: background-color 0.5s, color 0.5s;
+}
 #contact_sc:hover{
     background-color: white;
     color: #12131a;
+}
+#download_cv:hover{
+    background-color: white;
+    color: #12131a;
+}
+#head_links{
+    display: flex;
+    gap: 20px;
 }
 #pfp{
     height: 300px;
@@ -377,6 +405,11 @@ body{
     }
     #edu{
         margin-left: 0px;
+    }
+}
+@media screen and (max-width: 845px) {
+    #head_links{
+        flex-direction: column;
     }
 }
 @media screen and (max-width: 750px) {
